--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
-title: "my first Jekyll site"
-author: "Aimee Xu"
+theme: cayman
+title: "Aimee Xu"
+author: "@aimee"
 description: "writing this down so I don't forget"
