--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minimal
-title: "@aimxu"
+theme: minima
+title: "Aimee Xu"
 author: "@aimee"
 description: "writing this down so I don't forget"
