--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: "Aimee Xu"
-author: "@aimee"
+author: [@aimxu]({{www.linkedin.com/in/aimxu}})
 description: "writing this down so I don't forget"
