--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: "Aimee Xu"
-author: [@aimxu]({{www.linkedin.com/in/aimxu}})
+author: "@aimxu"
 description: "writing this down so I don't forget"
